1.23.3:
-------
- mpg123: Man page fixes by ESR.
- Actually check for sys/select.h (again?) in configure so that it is used.
  Fixes build on a Cygwin install, at least.

1.23.2:
-------
- mpg123: Fix compact ID3 tag printing to take UTF-8 character count
  into account again (thoughtless regression in 1.23.0).

1.23.1:
-------
- libout123:
-- Fix logic to prevent cases of output devices being closed more than once
   (stop after pausing triggered multiple close calls, which broke sndio, for
   example).
-- Fix JACK output handling of port wishlist, was simply broken for more than
   two ports (-o jack -a port1,port2,port3). Now, it is ensured that each
   output ports gets some connection to an out123 channel, possibly splitting
   one to multiple ports or mixing multiple channels into one port (cyclic
   connection scheme). Note that this does only apply for an explicitly given
   list of ports. You can still use --stereo to ensure that two output ports
   (if found) are used also for mono tracks.
-- Also use jack_free() in JACK output for ports list.
-- And finally, ensure that pthread library is linked to JACK module (would need
   hacking to work on non-POSIX, replacing sem_t with equivalent).

- mpg123:
-- Hide networking-related command-line parameters when disabled.

1.23.0:
-------
- libmpg123 version 42
-- This adds mpg123_framelength() and makes mpg123_position() truly obsolete.
-- Equalizer optional now (./configure --disable-equalizer) to save precious
   memory
-- Clip decode tables for large amplification with fixed-point decoders.
   Without that, high-pitched distortion enters really quickly when
   trying to increase volume even if output samples would not be clipped,
   weren't it for fixed-point math.
- libout123 version 1: First incarnation of libout123, a basic library to
  get audio data written to audio devices (or files) in simple blocking
  manner as opposed to callback APIs (which it wraps over). This collects